# pos

./: .gitignore  AUTHORS  AUTHORSHIP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/assets/: pos-cover-draft.json
docs/superpowers/plans/: 2026-06-19-pos-tui.md  2026-06-22-pos-raycast-extension.md
docs/superpowers/specs/: 2026-06-19-pos-interactive-mode-design.md
raycast/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
raycast/src/: commands.tsx  focuses.tsx  status.tsx
raycast/src/components/: ProjectList.tsx
raycast/src/lib/: actions.ts  palette.test.ts  palette.ts  pos.ts
src/pos/: __init__.py  cc.py  cli.py  cmux.py  completions.py  day.py  git.py  help.py  label.py  manifest.py  migrate.py  output.py  paths.py  projects.py  settings.py  solo.py  spread.py  status.py  tmuxify.py  tui.py  yard.py
tests/: test_cc.py  test_cli.py  test_cmux.py  test_completions.py  test_day.py  test_git.py  test_help.py  test_label.py  test_manifest.py  test_migrate.py  test_output.py  test_paths.py  test_projects.py  test_settings.py  test_sidecar.py  test_solo.py  test_spread.py  test_status.py  test_tmuxify.py  test_tui.py  test_yard.py
tests/fixtures/: focus.toml
