[project]
name = "pos"
version = "0.1.0"
description = "Focus-aligned terminal cockpit over cmux + tmux"
readme = "README.md"
authors = [
    { name = "glebis", email = "glebis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pos = "pos.cli:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
