[project]
name = "pos"
version = "0.1.0"
description = "Focus-aligned terminal cockpit over cmux + tmux"
readme = "README.md"
authors = [
    { name = "Gleb Kalinin", email = "glebis@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pos = "pos.cli:main"
pos-cc = "pos.cc:wrapper_main"

[build-system]
requires = ["uv_build>=0.9.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
